@@ -46,8 +46,8 @@ public class MyConfiguration implements WebMvcConfigurer {
       CorsConfiguration configuration = new CorsConfiguration();
       configuration.setAllowedOrigins(List.of("http://localhost:4200"));
       configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//      configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-//      configuration.setExposedHeaders(List.of("Authorization"));
+      configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+      configuration.setExposedHeaders(List.of("Authorization"));
       configuration.setAllowCredentials(true);
       UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
       source.registerCorsConfiguration("/**", configuration);
